2_platform/keycloak/kc-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kc-virtual-service
spec:
  hosts:
    - kc.platform.local
  gateways:
    - platform-gateway
  http:
    - match:
        - uri:
            prefix: /oauth2
      route:
        - destination:
            host: oauth2-proxy.oauth2-proxy.svc.cluster.local
            port:
              number: 80
      rewrite:
        authority: kc.platform.local
    - route:
        - destination:
            host: keycloak.platform.svc.cluster.local
            port:
              number: 80
